# Code-Quality-Intelligence-Agent

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  SUBMISSION.md  SYSTEM_FLOW.md  TESTING_CHECKLIST.md  TODO.md  TODO_ANALYSIS_FIX.md  TODO_FRONTEND.md  TODO_REDESIGN.md  cqia.bat  cqia_project_redesign.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pytest.ini  requirements-cli.txt  restructure.bat  setup.py  test_api.py  test_sample.py  test_single_file.py
backend/: .coveragerc  Dockerfile  __init__.py  aa.py  alembic.ini  cli.py  config.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  simple_server.py  temp_cache.py  test_api.py
backend/app/: __init__.py  cli.py  config.py  main.py  main.py.backup  main_fixed.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  analyze.py  pr.py  qa.py  report.py  router.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  analysis.py  audit.py  auth.py  conversations.py  health.py  organizations.py  projects.py  qa.py  reports.py  users.py  webhooks.py
backend/app/api/v1/schemas/: __init__.py  analysis.py  auth.py  common.py  project.py  qa.py  report.py
backend/app/core/: __init__.py  cache.py  cache.py.bak  celery_app.py  config.py  config_old.py  database.py  dependencies.py  exceptions.py  llm_client.py  logging.py  logging_old.py  security.py
backend/app/crud/: __init__.py  analysis.py  audit.py  conversation.py  organization.py  project.py  report.py  user.py  webhook.py
backend/app/db/: repositories.py  session.py  sqlite_session.py
backend/app/db/migrations/: __init__.py
backend/app/db/migrations/versions/: 20250121_initial_schema.py  __init__.py
backend/app/models/: __init__.py  analysis.py  audit.py  base.py  conversation.py  organization.py  project.py  report.py  schemas.py  user.py  webhook.py
backend/app/schemas/: __init__.py  analysis.py  audit.py  base.py  conversation.py  organization.py  project.py  report.py  user.py  webhook.py
backend/app/services/: __init__.py  agent_service.py  analysis_service.py  ast_analyzer.py  base.py
backend/app/services/advanced/: __init__.py  analytics_service.py  github_service.py  llm_service.py  rag_service.py
backend/app/services/ai/: __init__.py  agent_service.py  ai_service.py  code_generation_service.py  embedding_service.py  embeddings.py  llm_client.py  llm_service.py  rag_service.py
backend/app/services/analysis/: __init__.py  ast_analyzer.py  complexity_analyzer.py  dependency_analyzer.py  documentation_analyzer.py  duplication_detector.py  orchestrator.py  performance_analyzer.py  security_scanner.py  test_analyzer.py
backend/app/services/auth/: __init__.py  auth_service.py  jwt_service.py  oauth_service.py
backend/app/services/git/: __init__.py  git_service.py  github_service.py  gitlab_service.py  pr_reviewer.py
backend/app/services/notifications/: __init__.py  email_service.py  notification_manager.py
backend/app/services/reports/: __init__.py  dashboard_data.py  html_generator.py  pdf_generator.py  report_generator.py
backend/app/services/storage/: __init__.py  file_storage.py  local_storage.py  s3_service.py
backend/app/tasks/: analysis_tasks.py  cleanup_tasks.py  notification_tasks.py  report_tasks.py
backend/app/tests/integration/api/: __init__.py  test_auth_endpoints.py
backend/app/tests/integration/services/: __init__.py
backend/app/tests/unit/models/: __init__.py
backend/app/tests/unit/services/: __init__.py  test_auth_service.py
backend/app/tests/unit/utils/: __init__.py
backend/app/utils/: context_manager.py  logger.py  prompt_templates.py  validators.py
backend/test_files/: performance_issues.py  quality_issues.tsx  security_issues.js
backend/test_project/src/: auth.js  database.py
backend/test_project/utils/: helpers.ts
frontend/: __init__.py  jest.config.js  package-lock.json  package.json
frontend/src/: __init__.py
frontend/src/__tests__/: __init__.py  setup.ts
frontend/src/__tests__/e2e/: complete-workflow.test.tsx
frontend/src/__tests__/hooks/: useAnalysisData.test.ts  useErrorHandler.test.ts
frontend/src/__tests__/integration/: analysis-workflow.test.tsx
frontend/src/__tests__/services/: analysisService.test.ts  githubService.test.ts
frontend/src/app/: __init__.py  globals.css  layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx  LoadingStates.tsx  OfflineIndicator.tsx  __init__.py  analysis-results.tsx  chat-interface.tsx  file-upload-fixed.tsx  header.tsx  issue-detection.tsx  quality-metrics.tsx  real-issue-detection.tsx  sidebar.tsx
frontend/src/components/__tests__/: quality-metrics.test.tsx
frontend/src/components/advanced/: enterprise-dashboard.tsx  github-analyzer.tsx
frontend/src/components/charts/: quality-trends-chart.tsx
frontend/src/contexts/: AnalysisContext.tsx  __init__.py  index.ts
frontend/src/hooks/: __init__.py  index.ts  useAnalysisData.ts  useErrorHandler.ts  useNetworkStatus.ts
frontend/src/lib/: __init__.py
frontend/src/services/: __init__.py  ai-working.ts  ai.ts  analysis-corrected.ts  analysis-working.ts  analysis.ts  analysisService.ts  api-client-corrected.ts  api-client-fixed-responseType.ts  api-client-fixed.ts  api-client-working.ts  api-client.ts  api.ts  auth-corrected.ts  auth-final.ts  auth-fixed.ts  auth-working.ts  auth.ts  githubService.ts  index.ts  projects-corrected.ts  projects-final.ts  projects-working.ts  projects.ts  reports-working.ts  reports.ts  websocket.ts
frontend/src/styles/: __init__.py
frontend/src/types/: __init__.py  analysis.ts  api-corrected.ts  api.ts  auth-clean.ts  auth-corrected.ts  auth-fixed.ts  auth.ts  common-corrected.ts  common.ts  index-simple.ts  index.ts  project-corrected.ts  project.ts  report.ts  ui.ts
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
